src/objects/BMCServiceDesk__Change_Problem_Link__c.object
<CustomObject>
    <customHelpPage>BMCServiceDesk__StdFormHelpCommonLink</customHelpPage>
    <description>This object allows you to store data linking between changes and problems.</description>
    <fields>
        <fullName>BMCServiceDesk__FKChange__c</fullName>
        <description>This field stores the foreign key value of the linked change</description>
        <label>Change</label>
        <referenceTo>BMCServiceDesk__Change_Request__c</referenceTo>
        <relationshipLabel>Linked Problems</relationshipLabel>
        <relationshipName>Change_Problem_Links</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKProblem_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Change_Problem_Links</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKProblem__c</fullName>
        <description>This field stores the foreign key value of the linked problem</description>
        <label>Problem</label>
        <referenceTo>BMCServiceDesk__Problem__c</referenceTo>
        <relationshipLabel>Linked Change Requests</relationshipLabel>
        <relationshipName>Change_Problem_Links</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Change Problem Link</label>
    <nameField>
        <label>Change Problem Link Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Change Problem Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>